在项目视图增加camera文件夹

--- a/Login/Login.csproj
+++ b/Login/Login.csproj
@@ -56,11 +56,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Camera.cs" />
-    <Compile Include="CameraSetInfo.cs" />
-    <Compile Include="CameraSetting.cs">
+    <Compile Include="Camera\CameraSetInfo.cs" />
+    <Compile Include="Camera\CameraSetting.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="CameraSetting.Designer.cs">
+    <Compile Include="Camera\CameraSetting.Designer.cs">
       <DependentUpon>CameraSetting.cs</DependentUpon>
     </Compile>
     <Compile Include="ChangePwdForm.cs">
@@ -108,7 +108,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SampleUnitInfo.cs" />
     <Compile Include="UserInfo.cs" />
-    <EmbeddedResource Include="CameraSetting.resx">
+    <EmbeddedResource Include="Camera\CameraSetting.resx">
       <DependentUpon>CameraSetting.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ChangePwdForm.resx">
