ImageINfo加入DataCenter目录在项目视图

--- a/Login/Login.csproj
+++ b/Login/Login.csproj
@@ -83,7 +83,7 @@
     <Compile Include="EditSampleUnitForm.Designer.cs">
       <DependentUpon>EditSampleUnitForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="ImageInfo.cs" />
+    <Compile Include="DataCenter\ImageInfo.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
